Changes for 1.4.3:

 - [ZBX-160] fixed web.page.get to send \r\n instead of \n (Alexei)
 - [ZBX-149] fixed incorrect processing of vm.memory.size key in FreeBSD (Sasha)
 - [ZBX-109] added support of vm.memory.size[pfree] Linux, FreeBSD & Win agents (Sasha)
 - [ZBX-122] Hungarian translate
 - [ZBX-118] fixed show_popup_menu display problem (Sasha)
 - [ZBX-116] fixed typo in data.sql, "interfice" (Alexei)
 - [ZBX-130] Refresh unsupported active checks (Sasha)
 - [ZBX-134] fixes for hostid/groupid validation on Node switch (Artem)
 - [ZBX-131] fixed viewing password on install in plain text (Artem)
 - [ZBX-81] fix for item delay calculation problem in graphs (Artem)
 - [DEV-75] Empty command result window (Sasha)
 - [DEV-74] Scripts of all nodes are displayed (Sasha)
 - [ZBX-130] Refresh unsupported active checks (Sasha)
 - [DEV-75] Empty command result window
 - [DEV-74] Scripts of all nodes are displayed
 - [ZBX-107] do not display log related items in the queue (Alexei)
 - [DEV-43] support of new macros {ITEM.VALUE}, {ITEM.VALUE1}, etc (Alexei)
 - [ZBX-30,ZBX-47] better dependencies (Alexei)
 - [ZBX-48] fixed server crash if incorrect syntax of aggregate items is used (Alexei)
 - [ZBX-95] fixed patch.sql to work with buggy PHPMyAdmin (Alexei)
 - [ZBX-59] removed button "Switch Node" (Alexei)
 - [ZBX-19] fixed SMS sending (Sasha)
 - [DEV-46] added "save&return" button in acknowledgement (Artem)
 - [DEV-50] Improved incoming parameters exception validation (Artem)
 - [ZBX-76] Display number of members in host groups (Alexei)
 - [ZBX-92] Distributed monitoring: overwriting new information (Sasha)
 - [ZBX-90] fixed displaying of last line of a log file in the Latest Data and Overview (Alexei)
 - [DEV-42] Synchronisation of log files (Sasha)
 - [ZBX-89] Unused fields:history_lastid, ..str_lastid & ..uint_lastid (Sasha)
 - [ZBX-88] Chenged method to "get" in all forms which affects display info (Artem)