@@ -996,11 +996,11 @@
 	'S_EDIT'=>				'Edit',
 	'S_DIMENSION_COLS_ROWS'=>		'Dimension (cols x rows)',
 
-	'S_SLIDESHOWS'=>			'Slideshows',
-	'S_SLIDESHOW'=>				'Slideshow',
-	'S_CONFIGURATION_OF_SLIDESHOWS_BIG'=>	'CONFIGURATION OF SLIDESHOWS',
-	'S_SLIDESHOWS_BIG'=>			'SLIDESHOWS',
-	'S_NO_SLIDESHOWS_DEFINED'=>		'No slideshows defined',
+	'S_SLIDESHOWS'=>			'Slide shows',
+	'S_SLIDESHOW'=>				'Slide show',
+	'S_CONFIGURATION_OF_SLIDESHOWS_BIG'=>	'CONFIGURATION OF SLIDE SHOWS',
+	'S_SLIDESHOWS_BIG'=>			'SLIDE SHOWS',
+	'S_NO_SLIDESHOWS_DEFINED'=>		'No slide shows defined',
 	'S_COUNT_OF_SLIDES'=>			'Count of slides',
 	'S_NO_SLIDES_DEFINED'=>			'No slides defined',
 	'S_SLIDES'=>				'Slides',
